--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,10 @@
 				<hr>
 				<div class="left-side-contact">
 					<p>Tony Rome</p>
-					<p>tonyromebx@gmail.com</p>
+					<p>120 - Casals Pl Bronx, NY </p>
+					<p>Bronx NY 10475</p>
+					<p><a href"mailto:tonyromebx@gmail.com">tonyromebx@gmail.com</a></p>
+
 				</div>
 			</section>
 		</div>
