--- a/portfolio.html
+++ b/portfolio.html
@@ -33,19 +33,19 @@
 				<hr>
 				<section>
 					<div class="left-side-port">
-						<img src="assets/images/myimage.jpg">
+						<img src="assets/images/dummy-200x200-Butterfly.jpg">
 						<div class="text-block"> 
 						    <p>I AM THE BOSS</p>
 						</div>
 					</div>
 					<div class="left-side-port">
-						<img src="assets/images/myimage.jpg">
+						<img src="assets/images/dummy-200x200-Cottage.jpg">
 						<div class="text-block"> 
 						    <p>I AM THE BOSS</p>
 						</div>
 					</div>
 					<div class="left-side-port">
-						<img src="assets/images/myimage.jpg">
+						<img src="assets/images/dummy-200x200-Handball.jpg">
 						<div class="text-block"> 
 						    <p>I AM THE BOSS</p>
 						</div>
@@ -53,19 +53,19 @@
 				</section>
 				<section>
 					<div class="left-side-port">
-						<img src="assets/images/myimage.jpg">
+						<img src="assets/images/dummy-200x200-Map.jpg">
 						<div class="text-block"> 
 						    <p>I AM THE BOSS</p>
 						</div>
 					</div>
 					<div class="left-side-port">
-						<img src="assets/images/myimage.jpg">
+						<img src="assets/images/dummy-200x200-Mosque.jpg">
 						<div class="text-block"> 
 						    <p>I AM THE BOSS</p>
 						</div>
 					</div>
 					<div class="left-side-port">
-						<img src="assets/images/myimage.jpg">
+						<img src="assets/images/dummy-200x200-Stars.jpg">
 						<div class="text-block"> 
 						    <p>I AM THE BOSS</p>
 						</div>
@@ -75,6 +75,7 @@
 		</div>
 	</div>
 	<footer class="footer">
+		<p>Footer</p>
 	</footer>
 </body>
 
